Fixed some style issue (also caused layout problems with emojigrid)

--- a/src/components/index/Hero/_hero.scss
+++ b/src/components/index/Hero/_hero.scss
@@ -72,8 +72,8 @@ h2 {
 
 #emojiCloud{
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -50px;
+  left: -30px;
   width: 100vw;
-  height: calc(100vh - 80px);
+  height: 100%;
 }
